mightve fixed the #hl on about becoming overlapped for different displays, added dark mode for about

--- a/css/testing.css
+++ b/css/testing.css
@@ -9,6 +9,7 @@ html {
 }
 ::-webkit-scrollbar
 {
+  border-radius: 11px;
 	width: 12px;
 	background-color: #F5F5F5;
 }
@@ -300,14 +301,7 @@ body::-webkit-scrollbar{
   margin-left: -3px;
   margin-top: 600px;
 }
-#hl{
-  position: absolute;
-  border-top: 6px solid #333;
-  margin-top: 800px;
-  margin-left: 460px;
-  width: 1000px;
-  border-radius: 5px;
-}
+
 #smart-button-container{
   margin-left: 160px;
   float: left;
@@ -330,12 +324,17 @@ body::-webkit-scrollbar{
   display: inline;
   width: 970px;
   font-family: 'Jost', sans-serif;
-  
+  border-top: 6px solid black;
+  border-radius: 5px;
+  z-index: 2;
 }
 
 
 #about h1{
   overflow-y: scroll;
   height: 400px;
+  
   padding: 10px;
+ 
+  
 }
